# embedded-dht-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: dht11_22.md  dht20.md
examples/: Cargo.toml
examples/src/: main.rs
src/: dht.rs  dht11.rs  dht20.rs  dht22.rs  lib.rs
