[package]
name = "embedded-dht-rs"
version = "0.3.2"
edition = "2021"
license = "Apache-2.0"
description = "A platform agnostic driver to interface with the DHT11 / DHT20 (AHT20) / DHT22 (AM2302) temperature and humidity sensor"
homepage = "https://github.com/rust-dd/embedded-dht-rs"
documentation = "https://docs.rs/embedded-dht-rs"
repository = "https://github.com/rust-dd/embedded-dht-rs"
readme = "README.md"
keywords = ["embedded", "no-std", "dht11", "dht20", "dht22"]
autoexamples = false

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
embedded-hal-mock = "0.11.1"

[features]
dht11 = []
dht20 = []
dht22 = []
default = [] 

[lib]
doctest = false  

[profile.release]
codegen-units = 1
lto = true

[package.metadata.docs.rs]
# build docs for all features
all-features = true
