[package]
name = "embedded-dht-rs-on-esp32"
version = "0.1.0"
authors = ["zeldan <zelei.dan@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-dht-rs = { version = "0.3.2", features = ["dht11", "dht20", "dht22"] }
esp-backtrace = { version = "0.14.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.20.1", features = [ "esp32" ] }
esp-println = { version = "0.11.0", features = ["esp32", "log"] }
fugit = "0.3.7"
log = { version = "0.4.21" }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
